<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AToken</string>
    <string name="menu_new_token">New token</string>
    <string name="menu_about">About</string>
    <string name="menu_preferences">Preferences</string>
    <string name="about_text">Android token for one time passwords (RFC 6238 and 4226)</string>
    <string name="about_licensed">Licensed under GPL-2</string>
    <string name="about_version">version:</string>
    <string name="about_authors">Authors: Artem Sidorenko</string>
    <string name="about_homepage">http://www.2realities.com</string>
    <string name="about_copyright">Copyright 2012 Artem Sidorenko</string>
    <string name="about_title">About AToken</string>
    <string name="preferences_title">Preferences</string>
    <string name="preferences_ntp">Use NTP</string>
    <string name="preferences_summary_ntp">for time based tokens</string>
    <string name="main_no_tokens">No tokens</string>
    <string name="preferences_clipboard">Use clipboard</string>
    <string name="preferences_summary_clipboard">copy selected token to clipboard</string>
    <string name="new_token_text_name">Name</string>
    <string name="new_token_text_serial">Serial</string>
    <string name="new_token_text_seed">Seed</string>
    <string name="new_token_button_edit">Edit</string><string name="new_token_button_create">Create</string>
    <string name="new_token_radio_event">Event based</string>
    <string name="new_token_radio_time">Time based</string>
    <string name="new_token_title">New token</string><string name="new_token_edit_title">Edit token</string>
    <string name="new_token_toast_created">New token was created</string><string name="new_token_toast_updated">The token was updated</string>
    <string name="new_token_text_token_type">Token type</string>
    <string-array name="new_token_text_token_types">
        <item >HOTP/T30 - 30 seconds interval</item>
        <item >HOTP/T60 - 60 seconds interval</item>
    </string-array>
        <string name="main_list_serial">S/N:</string>
        <string name="main_edit">Edit</string>
        <string name="main_list_context_menu_delete">Delete</string>
        <string name="main_dialog_text_delete_token">Delete this token?</string>
        <string name="main_dialog_button_delete">Delete</string>
        <string name="main_dialog_button_cancel">Cancel</string>
        <string name="preferences_group_backup">Backup/Restore</string>
        <string name="preferences_backup">Backup</string>
        <string name="preferences_restore">Restore</string>
        <string name="new_token_toast_empty_name">Name is required</string>
        <string name="new_token_toast_short_seed">Seed is too short</string>
        <string name="new_token_toast_long_seed">Seed is too long</string>
        <string name="new_token_toast_seed_not_hex">Seed should be hexadecimal</string>
        <string name="main_list_context_menu_generate_token">Generate token</string>
        <string name="preferences_show_event_token_time">Show event token</string>

</resources>